correct overflow on landscape

--- a/Coding/Portfolio/projects.css
+++ b/Coding/Portfolio/projects.css
@@ -1,6 +1,6 @@
 html, body {
     height: 100%;
-
+    overflow: hidden;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
   }
@@ -14,6 +14,7 @@ html, body {
     width: 100%;
     height: 100%;
     align-content: flex-start;
+    overflow:scroll;
   }
 
  .project-flex-container > div { 
